--- a/Module1/lab32/lab32.ipynb
+++ b/Module1/lab32/lab32.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "0d11148a",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "ee06cff1",
    "metadata": {},
    "outputs": [],
@@ -745,12 +745,147 @@
     }
    ],
    "source": [
+    "#Thao option\n",
+    "\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "enc = OrdinalEncoder()\n",
     "\n",
     "X = [['009','High'],['005','high'],['007','Medium'],['009','high'],['003','low']]\n",
     "\n",
-    "enc.fit_transform(X)"
+    "enc.fit_transform(X)\n",
+    "#fitto fit the data and transform to transform it: having it both seperatly important because this allow to reuse th transform data into another model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "089414b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TransactionID</th>\n",
+       "      <th>ClientID</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>Bank_dep</th>\n",
+       "      <th>Risk</th>\n",
+       "      <th>Number of credits</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Risk_enc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>231</td>\n",
+       "      <td>self-employed</td>\n",
+       "      <td>009</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30200</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>765</td>\n",
+       "      <td>students</td>\n",
+       "      <td>005</td>\n",
+       "      <td>high</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12700</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>453</td>\n",
+       "      <td>Horeca</td>\n",
+       "      <td>007</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>5</td>\n",
+       "      <td>89400</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>231</td>\n",
+       "      <td>self-employed</td>\n",
+       "      <td>009</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30200</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>892</td>\n",
+       "      <td>finance</td>\n",
+       "      <td>003</td>\n",
+       "      <td>low</td>\n",
+       "      <td>3</td>\n",
+       "      <td>740000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TransactionID  ClientID     Profession Bank_dep    Risk  Number of credits  \\\n",
+       "0              1       231  self-employed      009    high                  2   \n",
+       "1              2       765       students      005    high                  3   \n",
+       "2              3       453         Horeca      007  medium                  5   \n",
+       "3              4       231  self-employed      009    high                  2   \n",
+       "4              5       892        finance      003     low                  3   \n",
+       "\n",
+       "   Revenue  Risk_enc  \n",
+       "0    30200         2  \n",
+       "1    12700         2  \n",
+       "2    89400         1  \n",
+       "3    30200         2  \n",
+       "4   740000         0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Kaci option with the data transposed to the main dataframe\n",
+    "x = pd.DataFrame(data['Risk'])\n",
+    "x\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "ratings_order = ['low', 'medium', 'high'] #put them in the order \n",
+    "oe = OrdinalEncoder(categories = [ratings_order], dtype=int)\n",
+    "oe.fit(x)\n",
+    "risk_ord = oe.transform(x)\n",
+    "risk_ord\n",
+    "data['Risk_enc']=risk_ord  #new column with the values\n",
+    "data"
    ]
   }
  ],
